--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,11 +25,11 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   intl: ^0.19.0
-  font_awesome_flutter: ^10.1.0
+  font_awesome_flutter: 10.7.0
   badges: ^3.1.2 
   file_picker: ^9.0.2
   flutter_colorpicker: ^1.0.3
-  flutter_linkify: ^5.0.2
+  flutter_linkify: ^6.0.0
   url_launcher: ^6.2.5 
   in_app_purchase: ^3.2.1
   purchases_flutter: ^8.7.0
