--- a/functions/package.json
+++ b/functions/package.json
@@ -22,9 +22,11 @@
     "firebase-functions": "^5.0.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.38.0",
     "eslint": "^8.15.0",
     "eslint-config-google": "^0.14.0",
     "firebase-functions-test": "^3.4.0",
+    "globals": "^16.4.0",
     "jest": "^29.7.0"
   },
   "private": true
