--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -9,7 +9,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.example.bNet</string>
+	<string>com.sk.bNet</string>
 	<key>PROJECT_ID</key>
 	<string>b-net-9bdc2</string>
 	<key>STORAGE_BUCKET</key>
@@ -25,6 +25,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:157664515543:ios:5283560846ed5e22a96792</string>
+	<string>1:157664515543:ios:c3f564c971f44c24a96792</string>
 </dict>
 </plist>
