--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,8 @@ dependencies:
   firebase_auth: ^5.3.1
   firebase_core: ^3.6.0
   cloud_firestore: ^5.4.4
+  firebase_messaging: ^15.0.0
+  flutter_local_notifications: ^17.0.0
   table_calendar: ^3.1.2
   firebase_storage: ^12.3.3
   image_picker: ^1.1.2
