--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_keyboard_visibility: ^6.0.0
   fl_chart: ^0.66.0
   shared_preferences: ^2.5.3
+  image_gallery_saver: ^2.0.0
   
 
 
