--- a/functions/package.json
+++ b/functions/package.json
@@ -17,6 +17,7 @@
   "main": "index.js",
   "dependencies": {
     "@google-cloud/tasks": "^5.5.2",
+    "dotenv": "^17.2.3",
     "firebase": "^11.4.0",
     "firebase-admin": "^12.1.0",
     "firebase-functions": "^5.0.0"
