--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ description: "A new Flutter project."
 publish_to: 'none'
 
 
-version: 1.0.1+2
+version: 1.0.1+14
 
 environment:
   sdk: ^3.5.3
@@ -17,7 +17,6 @@ dependencies:
   firebase_core: ^3.6.0
   cloud_firestore: ^5.4.4
   firebase_messaging: ^15.0.0
-  flutter_local_notifications: ^17.0.0
   table_calendar: ^3.1.2
   firebase_storage: ^12.3.3
   image_picker: ^1.1.2
@@ -38,9 +37,7 @@ dependencies:
   flutter_keyboard_visibility: ^6.0.0
   fl_chart: ^0.66.0
   shared_preferences: ^2.5.3
-  image_gallery_saver: ^2.0.0
-  
-
+  gal: ^2.3.0
 
 dev_dependencies:
   flutter_test:
@@ -78,9 +75,13 @@ flutter:
     - assets/Subscription_teamPlatina.png
     - assets/Subscription_teamPlatina12month.png
     - assets/icon.png
+    - assets/icon-sp.png
 
 flutter_launcher_icons:
   android: true
   ios: true
-  image_path: "assets/icon.png"
+
+  image_path_android: "assets/icon-android.png"
+  image_path_ios: "assets/icon.png"
+
   remove_alpha_ios: true
